--- a/index.html
+++ b/index.html
@@ -52,9 +52,18 @@
     <!--####################################### -->
 
         <section class="container-fluid">
-          <h2>My Precious</h2>
-          <h2>The One Ring</h2>
-          <h2>Please find it !</h2>
+            <div class="row">
+              <h2 class="surrounded-title d-inline-flex">My Precious</h2>
+            </div>
+            <div class="row d-flex justify-content-center">
+                <div class="one-ring"></div>
+                <div>
+                    <h2>The One Ring</h2>
+                </div>
+            </div>
+            <div class="row">
+                <h2 class="chain-on-top">Please find it !</h2>
+            </div>
         </section>
 
     <!--####################################### -->
