--- a/precious.html
+++ b/precious.html
@@ -62,7 +62,15 @@
                 </div>
             </div>
             <div class="row">
-                <h2 class="chain-on-top">Please find it !</h2>
+                <div class="chain d-flex justify-content-center w-100 align-items-center">
+                    <div class="chained-ring"></div>
+                    <div class="chained-ring"></div>
+                    <div class="chained-ring"></div>
+                    <div class="chained-ring"></div>
+                    <div class="chained-ring"></div>
+                    <div class="chained-ring"></div>
+                </div>
+                <h2>Please find it !</h2>
             </div>
         </section>
 
