--- a/precious.html
+++ b/precious.html
@@ -26,6 +26,9 @@
 
         <ul class="navbar-nav">
           <li class="nav-item">
+            <a class="nav-link" href="big-eye.html">Big Eye</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#fellows">Fellows</a>
           </li>
           <li class="nav-item">
